components/default/zot/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app zot
  labels:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
  annotations:
    gethomepage.dev/href: "https://zot.rafaribe.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/zot-registry.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["zot.${CLUSTER_DOMAIN}"]
  rules:
    - matches:
        - path:
            type: Exact
            value: /metrics
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: zot.${CLUSTER_DOMAIN}
            path:
              type: ReplaceFullPath
              replaceFullPath: /
            statusCode: 302
    - backendRefs:
        - name: *app
          port: 5000
